# ChangeLog for dev-perl/DateTime
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime/ChangeLog,v 1.131 2012/11/17 19:54:47 tove Exp $

*DateTime-0.780.0 (17 Nov 2012)

  17 Nov 2012; Torsten Veller <tove@gentoo.org> +DateTime-0.780.0.ebuild:
  Version bump

  02 Sep 2012; Torsten Veller <tove@gentoo.org> -DateTime-0.700.0.ebuild,
  -DateTime-0.720.0.ebuild, -DateTime-0.730.0.ebuild, -DateTime-0.740.0.ebuild,
  -DateTime-0.750.0.ebuild:
  Cleanup

  01 Sep 2012; Fabian Groffen <grobian@gentoo.org> DateTime-0.760.0.ebuild:
  Marked ~ppc-aix, bug #432288

*DateTime-0.760.0 (03 Jul 2012)

  03 Jul 2012; Torsten Veller <tove@gentoo.org> +DateTime-0.760.0.ebuild:
  Version bump

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

*DateTime-0.750.0 (14 Jun 2012)

  14 Jun 2012; Torsten Veller <tove@gentoo.org> +DateTime-0.750.0.ebuild:
  Version bump

*DateTime-0.740.0 (21 Apr 2012)

  21 Apr 2012; Robin H. Johnson <robbat2@gentoo.org> DateTime-0.730.0.ebuild,
  +DateTime-0.740.0.ebuild:
  Version bump via perl-bump experimental tool.

*DateTime-0.730.0 (18 Mar 2012)

  18 Mar 2012; Torsten Veller <tove@gentoo.org> +DateTime-0.730.0.ebuild:
  Version bump

*DateTime-0.720.0 (08 Jan 2012)

  08 Jan 2012; Torsten Veller <tove@gentoo.org> +DateTime-0.720.0.ebuild:
  Version bump

  30 Jul 2011; Torsten Veller <tove@gentoo.org> -DateTime-0.66.ebuild,
  -DateTime-0.670.0.ebuild, -DateTime-0.680.0.ebuild:
  Cleanup

  06 Jul 2011; Alexis Ballier <aballier@gentoo.org> DateTime-0.700.0.ebuild:
  keyword ~x86-fbsd, bug #366911

  05 Jun 2011; Jeroen Roovers <jer@gentoo.org> DateTime-0.700.0.ebuild:
  Marked ~hppa (bug #366911).

  05 Jun 2011; Kacper Kowalik <xarthisius@gentoo.org> DateTime-0.700.0.ebuild:
  Marked ~ppc/~ppc64 wrt #366911

  29 May 2011; Fabian Groffen <grobian@gentoo.org> DateTime-0.700.0.ebuild:
  Marked ~x64-macos, bug #368541
