@@ -6,13 +6,13 @@ DIST DateTime-0.76.tar.gz 171511 SHA256 9ca0ab3c5b09d421cc260f83566a0c71f6cf683d
 DIST DateTime-0.78.tar.gz 176173 SHA256 85f59b555bf594b57077afc636555d8393ab4b2c9e779a50524b0ab2e2602c3e SHA512 58886f9050f0b4517816695519f9b9b95a920e219fa7c4374b07e2c641442c20cf428362e1bcc53d424e5ac9a74bd5d194a54897409b4f7cc8312588871db79a WHIRLPOOL 5acebe7cf043f43daa14ad589cfdbb1d3faf282fd7180128a7f3097b09d7c55b2e08b367c303f75cfbf90e1e130ca057fdea8cecc0add56a590eb51601bbc76d
 EBUILD DateTime-0.55.ebuild 800 SHA256 279af5479e62967853e6442b5109032970e4f0e1e1756d907940ee072ffa16d4 SHA512 ca092f584fa83c692abdcd3336f8a29cfa0bab3c5f1835805c0a3d04ca7b6ba5aa804ad910d1959647eb3f1f84c1bf749bd4adb835de6e9a433e38533463386c WHIRLPOOL 457be8c962c1d550ada23caa10f9df0beeaa6258b1d20f2c5a4e38fc0bc074c818800a5e6fa844b76b903417524233fdf6de63b1fa920920fe236dfdbf85ad33
 EBUILD DateTime-0.760.0.ebuild 786 SHA256 7532f4c6e6e9d15046c17f006558befb67ecfccdb2dc79f34e196b4d8db4522a SHA512 13501a5001c0174560b92b25766957216b2a7781d2b38ef2063fa6f36abc8f7ed727b89b002857440d503962b2b421a40d570f6bb50f68e9778c76c6bda930a9 WHIRLPOOL 051227ced7d71df3986b11ca36af6c635d2032e4a51a0d12eca97743fa34a83afbb9d0a5f4355dcea5d0b3295b81e272667a65cb7b2d5298b2b7c15203c37e39
-EBUILD DateTime-0.780.0.ebuild 770 SHA256 efe91dbda66e81eb73c8842c16c0e0979624ba805c49d26c4063f7aa6ce9dfd8 SHA512 7c9c2fe2e23f07d3174254d747d604f4d2f71c05e4b524eaf05ba2f087cc1e4a0f0e3c97365fa75e0260f318bffd0b6a591f17c67f5dafcd209eaf5b9613cc2a WHIRLPOOL 00592db9a2b0f63ab5609c926df5ae2c737d843a3de4fe1e3682b28b6d8898362c87dd8acbb9b05e2e93b52c0f7d03ccc30611ae0be425c9c9d7128659d97bbe
-MISC ChangeLog 15700 SHA256 bad3fad0528f6f9b937f0b6834ea7f598f4140e5f87baf1512791e8eb345e78c SHA512 0205c46abf42d775a870f49538cb95e1cffefc6e21093f4fdb04ede81b88d029a5199036382fdad20cae499fd66b62b034fdcc88b7b6adbf4a07392715c16e3b WHIRLPOOL 5c1c7c292032af72514597ce08fd15627f78f23bdbe2875b8afbf1dd5edbca44f4a9397361cbb00453e0fdb3fe5ffcc4aaa095dd7514bc9f9c58ceae3ce94878
+EBUILD DateTime-0.780.0.ebuild 768 SHA256 7a5b34bdd2288004908c42a196f4e511fc31ee4795948748e31151d8fcfe77d2 SHA512 d89e52c7b38c18a937047b92b593b48af43d1972949492c433d61da414dfb5d257686dedd9d6f8deaff71f12e1771c50e9527521785746cc6a8f51d6fa0af47c WHIRLPOOL f77bcc0b41d94f43aacf1d0d99205264dc4506db1350a5b58d7edb527acd160b5782cdd14e372f8617101faf09500e48011125964a3c2e9b87515f8517d66750
+MISC ChangeLog 15805 SHA256 d86139cb282a6cefa1a282b206f1146f7f669ac75f7d7bfb3b7b0db984275e93 SHA512 241b9e32b251132ca04b1bae2ce14496119850ba78f0dc3a7e84808ba94a7740d12be7a7448508d4feedcc49d126cb2d3b705b1dc9b876ff6fe8648c9327bec1 WHIRLPOOL 8b8ffce370f8e09236d2bafa97709f034f460c4009b74093b9ed20790e41ba235b04bd332e77377701aedde4b33ed43a650350cbc964accb2ecd6a554694d48c
 MISC metadata.xml 694 SHA256 e7d7b6ec524f54727e5efc4a4218774bcdaf8d798411099a353dc97f7528659a SHA512 48b947090e1a013df91927e53d55efb6078f252d428185d5dc5bc4a38fffa1b5476528a152260643c5686978bd7185438e9a9d6d3c1da7c227cea07a742d2d12 WHIRLPOOL f066aa41e9a89dfa794151836d957e3023b0abcbd85675b229a6e2cbb1b7a7b276263fdf8da26eed90cfcf7c077c4028ffeb6e4ddc910257bb00995ea0773ff2
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlCn64gACgkQV3J2n04EauypqACdG57nwg225QfTkzWhndYn9+vu
-xi0AnR7uF3864xrMH8eI9/e3YEKSbrzg
-=B//B
+iEYEAREIAAYFAlDtcjcACgkQVWmRsqeSphNlZQCeNFnE8zUu6Md+a4aUVozhlBVm
+oCsAn0NWHJlwN+jHusL2M46vuUD1uqy6
+=4nuQ
 -----END PGP SIGNATURE-----
