@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/DateTime
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime/ChangeLog,v 1.131 2012/11/17 19:54:47 tove Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime/ChangeLog,v 1.132 2013/01/09 13:35:50 jer Exp $
+
+  09 Jan 2013; Jeroen Roovers <jer@gentoo.org> DateTime-0.780.0.ebuild:
+  Stable for HPPA (bug #450926).
 
 *DateTime-0.780.0 (17 Nov 2012)
 
